--- a/test.css
+++ b/test.css
@@ -1,13 +1,21 @@
-    .box {
-        width: 199px;
-        height: 150px;
-        margin: 10px;
-        font-size: 16px;
-        opacity: 0.8;
-        position: relative;
-        background: #000;
-        background-color: #fff;
-        width: 10px;
-        height: 10em;
-        width: 10%;
-    }
+.responsive-svg {
+  width: 100%;
+  height: auto;
+  max-width: 500px;
+}
+
+/* Maintain aspect ratio */
+.svg-container {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+}
+
+.svg-container svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
